[package]
name = "pangxie-loader"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01007EC013ABC000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
tegra_swizzle = "0.1"
image = "0.23.14"
binrw = "0.8.0"

[patch.crates-io]
libc = { git = "https://github.com/ultimate-research/libc-nnsdk" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
